tests/snapshots/golden_tests__nginx_with_includes.snap
---
source: tests/golden_tests.rs
expression: kdl
---
schema-version "1.0"

system {
    worker-threads 0
    max-connections 2048
}

listeners {
    listener "listener_443" {
        address "0.0.0.0:443"
        protocol "https"
        tls {
            cert-file "/etc/ssl/certs/api.crt"
            key-file "/etc/ssl/private/api.key"
        }
    }
    listener "listener_80" {
        address "0.0.0.0:80"
        protocol "http"
    }
}

routes {
    route "route_" {
        matches {
            path-prefix "/"
            host "frontend.example.com"
        }
        static-files {
            root "/var/www/html"
            index "index.html"
            directory-listing #false
        }
    }
    route "route_api" {
        matches {
            path-prefix "/api/"
            host "api.example.com"
        }
        upstream "api_backend"
    }
    route "route_static" {
        matches {
            path-prefix "/static/"
            host "api.example.com"
        }
        upstream "static_backend"
    }
}

upstreams {
    upstream "api_backend" {
        target "10.0.1.1:8080" weight=5
        target "10.0.1.2:8080" weight=3
        load-balancing "least_connections"
        connection-pool {
            max-idle 16
        }
    }
    upstream "static_backend" {
        target "10.0.2.1:80"
        target "10.0.2.2:80"
        load-balancing "round_robin"
    }
}
